--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>Grammar Cloze Adventure</h1>
     <p class="instructions">
-      Help the Grammar Wizard save the Kingdom by filling in the blanks! Drag, tap, or use voice commands to fill the gaps. Use the menu for hints and controls!
+      Help the Grammar Wizard save the Kingdom by filling in the blanks! Drag or tap a word to fill in the blanks. Use the menu for hints and controls!
     </p>
   </header>
 
@@ -62,7 +62,6 @@
     <button id="clear-btn">🗑️ Clear</button>
     <button id="highlight-clues-btn">🔍 Highlight Clues</button>
     <button id="toggle-challenge">⏱️ Toggle Challenge</button>
-    <button id="voice-command-btn">🎙️ Voice Command</button>
   </div>
   <button id="fullscreen-btn">⤢</button>
 
@@ -90,7 +89,6 @@
     </div>
   </div>
 
-  <!-- JavaScript Module -->
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
