--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>Grammar Cloze Adventure</h1>
     <p class="instructions">
-      Help the Grammar Wizard save the Kingdom by filling in the blanks! Drag or tap a word to fill in the blanks. Use the menu for hints and controls!
+      Help the Grammar Wizard save the Kingdom by filling in the blanks! Drag or tap a word to fill in the gaps. Use the menu for hints and controls!
     </p>
   </header>
 
