--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </select>
         </li>
         <li>
-          <!-- Placeholder for Timer Customization (e.g., 30s, 60s, or off) -->
+          <!-- Timer Setting -->
           <label for="timer-setting">Timer:</label>
           <select id="timer-setting" aria-label="Select timer duration">
             <option value="60" selected>60 seconds</option>
@@ -81,8 +81,6 @@
     <div class="level-info">
       <span id="level">Level: Apprentice</span>
     </div>
-    <!-- Placeholder for Teacher Dashboard Integration -->
-    <!-- <a href="#" id="teacher-dashboard">Teacher Dashboard</a> -->
   </aside>
 
   <!-- Main Content Area -->
@@ -101,7 +99,7 @@
       <span id="timer">Time: 60s</span>
       <div id="progress-bar-container"><div id="progress-bar"></div></div>
       <div id="timer-container"><div id="timer-bar"></div></div>
-      <!-- Progress Stepper (future enhancement: kingdom map style) -->
+      <!-- Progress Stepper -->
       <div id="progress-stepper" class="progress-stepper" aria-label="Progress stepper"></div>
       <div class="navigation-buttons">
         <button id="prev-btn" aria-label="Previous passage">⬅️ Prev</button>
