--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grammar Cloze Adventure</title>
-  <!-- Load fonts: Poppins for body and Lora for titles -->
+  <!-- Load fonts: Poppins for body, Lora for titles, and OpenDyslexic for dyslexia-friendly toggle -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@400;700&display=swap" rel="stylesheet" />
+  <!-- OpenDyslexic (assumed available via CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-dyslexic/1.0.0/OpenDyslexic-Regular.min.css" integrity="sha512-0LJHTx5mCJlI6+KNeYchpPsptJo6WHyc+dcYf3ABdyIkn4bNyVLw6OfTEap79+34HKSfd1x2ElcCFstVaW0Kkg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css" />
   <!-- ResponsiveVoice (replace YOUR_API_KEY with your actual key) -->
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_API_KEY"></script>
@@ -18,13 +20,13 @@
     <p class="instructions">
       Drag or tap a word to fill in the blanks. Use the sidebar for hints and controls!
     </p>
-    <!-- Light Mode Toggle -->
-    <button id="toggle-theme" class="theme-toggle" aria-label="Toggle light mode">Light Mode</button>
+    <!-- Theme Toggle Button -->
+    <button id="toggle-theme" class="theme-toggle" aria-label="Toggle light mode">Dark Mode</button>
   </header>
 
   <!-- Wizard Advice Area -->
   <div id="wizard-advice" class="wizard-advice" aria-live="polite">
-    Greetings, young wizard! Ready to save the kingdom of grammar?
+    <img src="wizard-icon.png" alt="Wizard" class="wizard-mascot" /> Greetings, young wizard! Ready to save the kingdom of grammar?
   </div>
 
   <!-- Sidebar for Controls -->
@@ -58,7 +60,7 @@
         </li>
         <li>
           <button id="hint-btn" class="sidebar-btn" aria-label="Get a hint">
-            💡 Hint
+            🪄 Hint
           </button>
         </li>
         <li>
@@ -74,6 +76,11 @@
         <li>
           <button id="read-passage-btn" class="sidebar-btn" aria-label="Read passage">
             🔊 Read Passage
+          </button>
+        </li>
+        <li>
+          <button id="toggle-dyslexia" class="sidebar-btn" aria-label="Toggle dyslexia-friendly font">
+            Toggle Dyslexia Font
           </button>
         </li>
       </ul>
@@ -93,10 +100,10 @@
     <div id="feedback" aria-live="assertive"></div>
     <!-- Status Bar -->
     <div class="status-bar">
-      <span id="progress">Progress: 1 / 15</span>
-      <span id="score">Score: 0</span>
-      <span id="stars">Stars: 0</span>
-      <span id="timer">Time: 60s</span>
+      <span id="progress"><i class="icon progress-icon"></i> Progress: 1 / 15</span>
+      <span id="score"><i class="icon score-icon"></i> Score: 0</span>
+      <span id="stars"><i class="icon stars-icon"></i> Stars: 0</span>
+      <span id="timer"><i class="icon timer-icon"></i> Time: 60s</span>
       <div id="progress-bar-container"><div id="progress-bar"></div></div>
       <div id="timer-container"><div id="timer-bar"></div></div>
       <!-- Progress Stepper -->
