--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Grammar Cloze Adventure</title>
   <!-- Load fonts: Poppins for body, Lora for titles, and OpenDyslexic for dyslexia-friendly toggle -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@400;700&display=swap" rel="stylesheet" />
-  <!-- OpenDyslexic (assumed available via CDN) -->
+  <!-- OpenDyslexic (via CDN) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-dyslexic/1.0.0/OpenDyslexic-Regular.min.css" integrity="sha512-0LJHTx5mCJlI6+KNeYchpPsptJo6WHyc+dcYf3ABdyIkn4bNyVLw6OfTEap79+34HKSfd1x2ElcCFstVaW0Kkg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css" />
   <!-- ResponsiveVoice (replace YOUR_API_KEY with your actual key) -->
@@ -21,12 +21,13 @@
       Drag or tap a word to fill in the blanks. Use the sidebar for hints and controls!
     </p>
     <!-- Theme Toggle Button -->
-    <button id="toggle-theme" class="theme-toggle" aria-label="Toggle light mode">Dark Mode</button>
+    <button id="toggle-theme" class="theme-toggle" aria-label="Toggle dark/light mode">Switch to Light Mode</button>
   </header>
 
   <!-- Wizard Advice Area -->
   <div id="wizard-advice" class="wizard-advice" aria-live="polite">
-    <img src="wizard-icon.png" alt="Wizard" class="wizard-mascot" /> Greetings, young wizard! Ready to save the kingdom of grammar?
+    <img src="wizard-icon.png" alt="Wizard" class="wizard-mascot" />
+    Greetings, young wizard! Ready to save the kingdom of grammar?
   </div>
 
   <!-- Sidebar for Controls -->
@@ -45,7 +46,6 @@
           </select>
         </li>
         <li>
-          <!-- Timer Setting -->
           <label for="timer-setting">Timer:</label>
           <select id="timer-setting" aria-label="Select timer duration">
             <option value="60" selected>60 seconds</option>
@@ -74,8 +74,8 @@
           </button>
         </li>
         <li>
-          <button id="read-passage-btn" class="sidebar-btn" aria-label="Read passage">
-            🔊 Read Passage
+          <button id="read-passage-btn" class="sidebar-btn" aria-label="Listen to passage">
+            🔊 Listen to Passage
           </button>
         </li>
         <li>
@@ -96,7 +96,7 @@
       <div id="passage-text" aria-label="Grammar passage"></div>
       <div id="word-box" aria-label="Available words"></div>
     </div>
-    <!-- Feedback area with ARIA live region -->
+    <!-- Feedback area -->
     <div id="feedback" aria-live="assertive"></div>
     <!-- Status Bar -->
     <div class="status-bar">
@@ -106,7 +106,6 @@
       <span id="timer"><i class="icon timer-icon"></i> Time: 60s</span>
       <div id="progress-bar-container"><div id="progress-bar"></div></div>
       <div id="timer-container"><div id="timer-bar"></div></div>
-      <!-- Progress Stepper -->
       <div id="progress-stepper" class="progress-stepper" aria-label="Progress stepper"></div>
       <div class="navigation-buttons">
         <button id="prev-btn" aria-label="Previous passage">⬅️ Prev</button>
