--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grammar Cloze Adventure</title>
-  <!-- Load fonts: Poppins for body, Lora for titles, and OpenDyslexic for dyslexia-friendly toggle -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@400;700&display=swap" rel="stylesheet" />
-  <!-- OpenDyslexic via CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-dyslexic/1.0.0/OpenDyslexic-Regular.min.css" integrity="sha512-0LJHTx5mCJlI6+KNeYchpPsptJo6WHyc+dcYf3ABdyIkn4bNyVLw6OfTEap79+34HKSfd1x2ElcCFstVaW0Kkg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css" />
-  <!-- ResponsiveVoice (replace YOUR_API_KEY with your actual key) -->
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_API_KEY"></script>
-  <!-- Favicon -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <!-- Storyline Modal (Guided Tour) -->
+  <!-- Storyline Modal -->
   <div id="storyline-modal" class="modal">
     <div class="modal-content">
       <h2>The Wizard's Quest</h2>
@@ -24,25 +21,36 @@
     </div>
   </div>
 
+  <!-- Progress Dashboard Modal -->
+  <div id="progress-dashboard-modal" class="modal">
+    <div class="modal-content">
+      <h2>Your Progress</h2>
+      <canvas id="progress-chart"></canvas>
+      <p id="progress-summary"></p>
+      <button id="close-dashboard" class="modal-btn">Close</button>
+      <button id="notify-parents" class="modal-btn">Notify Parents</button>
+    </div>
+  </div>
+
   <header>
     <h1>Grammar Cloze Adventure</h1>
     <p class="instructions">
       Drag or tap a word to fill in the blanks. Use the sidebar for hints and controls!
     </p>
-    <!-- Theme Toggle Button -->
     <button id="toggle-theme" class="theme-toggle" aria-label="Toggle dark/light mode">
       Switch to Light Mode
     </button>
+    <button id="view-progress" class="theme-toggle" aria-label="View progress">
+      View Progress
+    </button>
   </header>
 
-  <!-- Wizard Advice Area with Expanded Mascots -->
   <div id="wizard-advice" class="wizard-advice" aria-live="polite">
     <img src="wizard-icon.png" alt="Wizard" class="wizard-mascot" />
     <img src="sidekick-dragon.png" alt="Dragon" class="sidekick-mascot" />
     Greetings, young wizard! Ready to save the kingdom of grammar?
   </div>
 
-  <!-- Sidebar for Controls -->
   <aside class="sidebar">
     <nav>
       <ul>
@@ -51,7 +59,18 @@
           <select id="grammar-type" aria-label="Select grammar type">
             <option value="prepositions">Prepositions</option>
             <option value="conjunctions">Conjunctions</option>
-            <!-- Add more options as needed -->
+            <option value="subjectVerbAgreement">Subject-Verb Agreement</option>
+            <option value="pronouns">Pronouns</option>
+            <option value="adjectivesAdverbs">Adjectives & Adverbs</option>
+            <option value="tenses">Tenses</option>
+          </select>
+        </li>
+        <li>
+          <label for="difficulty-level">Difficulty:</label>
+          <select id="difficulty-level" aria-label="Select difficulty level">
+            <option value="P1">Primary 1</option>
+            <option value="P2">Primary 2</option>
+            <option value="P3">Primary 3</option>
           </select>
         </li>
         <li>
@@ -103,15 +122,12 @@
     </div>
   </aside>
 
-  <!-- Main Content Area -->
   <main>
     <div class="game-container">
       <div id="passage-text" aria-label="Grammar passage"></div>
       <div id="word-box" aria-label="Available words"></div>
     </div>
-    <!-- Feedback Area -->
     <div id="feedback" aria-live="assertive"></div>
-    <!-- Status Bar with Progress Indicators -->
     <div class="status-bar">
       <span id="progress"><i class="icon progress-icon"></i> Progress: 1 / 15</span>
       <span id="score"><i class="icon score-icon"></i> Score: 0</span>
@@ -126,6 +142,11 @@
       </div>
     </div>
   </main>
+
+  <!-- Audio Elements for Sound Effects -->
+  <audio id="correct-sound" src="correct.mp3"></audio>
+  <audio id="incorrect-sound" src="incorrect.mp3"></audio>
+  <audio id="background-music" src="mystical-forest.mp3" loop></audio>
 
   <script src="script.js"></script>
 </body>
