--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grammar Cloze Adventure</title>
   <link rel="stylesheet" href="styles.css" />
+  <!-- ResponsiveVoice library for text-to-speech -->
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_API_KEY"></script>
 </head>
 <body>
@@ -13,7 +14,8 @@
     <div class="modal-content">
       <h2>Welcome to Grammar Cloze Adventure!</h2>
       <p>
-        Drag or tap a word to fill in each blank. Use the sidebar for hints and settings. When you are ready, press the "Submit" button to check your answers.
+        Drag or tap a word to fill in each blank. Use the sidebar for hints and settings.
+        When you’re ready, press "Submit" to check your answers.
       </p>
       <button id="tutorial-close-btn" class="modal-btn">Let's Begin</button>
     </div>
@@ -23,7 +25,7 @@
   <header>
     <h1>Grammar Cloze Adventure</h1>
     <p class="instructions">
-      Drag or tap a word to fill in the blanks. Use the sidebar for more options and hints. Then press "Submit" to check your answers.
+      Drag or tap a word to fill in the blanks, then press "Submit" for detailed feedback.
     </p>
     <button id="toggle-theme" class="theme-toggle">Light Mode</button>
     <button id="sidebar-toggle" class="sidebar-toggle">☰</button>
@@ -62,7 +64,7 @@
       <div id="passage-text" aria-label="Grammar passage"></div>
       <div id="word-box" aria-label="Available words"></div>
     </div>
-    <!-- Navigation Buttons (Submit included) -->
+    <!-- Navigation Buttons including Submit -->
     <div class="navigation-buttons">
       <button id="submit-btn" aria-label="Submit Answers">Submit</button>
       <button id="prev-btn" aria-label="Previous Passage">⬅️ Prev</button>
@@ -84,7 +86,7 @@
     </div>
   </main>
 
-  <!-- Audio Elements -->
+  <!-- Audio Elements for Sound Effects -->
   <audio id="correct-sound" src="correct.mp3"></audio>
   <audio id="incorrect-sound" src="incorrect.mp3"></audio>
 
